resources/css/styles.css
/* Universal Styles*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
}

body {
    background-color: black;
}

/* Header */

header {
    background-color: rgb(44, 1, 70);
    border-bottom: silver 2px solid;
    position: fixed;
    top: 0;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 1rem;
    height: 4rem;
    z-index: 1;
}

h1 a {
    text-decoration: none;
    font-size: 2rem;
    color: white;
    font-family: 'Aladin', cursive;
    letter-spacing: 0.2rem;
}

/* Nav */

nav {
    min-width: 40%;
}

nav ul {
    display: flex;
    justify-content: space-between;
    list-style: none;
}

nav li a {
    text-decoration: none;
    color: white;
    font-size: 1rem;
    text-transform: uppercase;
    font-weight: bold;
}

nav li a:hover {
    color: rgb(117, 196, 202);
}

.mobile {
    display: none;
}

.mobile-home {
    display: none;
}

/* Colour Mode Switch */

#switch {
    display: inline-flex;
    align-items: center;
}

.fa-regular {
    color: silver;
}

.fa-moon {
    padding-right: 0.25rem;
}

.fa-sun {
    padding-left: 0.25rem;
}

.switch {
    position: relative;
    display: inline-block;
    width: 3rem;
    height: 1.5rem;
    padding: 0 1rem;
}

.switch input {
    display: none;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: silver;
    transition: .4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 1rem;
    width: 1rem;
    left: 4px;
    bottom: 4px;
    background-color: white;
    transition: .4s;
}

input:checked+.slider {
    background-color: rgb(44, 1, 70);
}

input:checked+.slider:before {
    transform: translateX(1.5rem);
}

.slider.round {
    border-radius: 1rem;
}

.slider.round:before {
    border-radius: 50%;
}

/* Main & Sections */

main {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
}

section {
    width: 80%;
    position: relative;
}

h2 {
    font-size: 2rem;
}

/* Banner */

#banner {
    margin-top: 4rem;
    height: 50rem;
    width: 100%;
    background-image: url("../images/banner.jpg");
    background-position: center;
    background-size: cover;
    position: absolute;
}

#bio_section, #bio-contact {
    margin: 9rem 0 10rem 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap-reverse;
}

.bio {
    color: white;
    background-color: rgba(44, 1, 70, 0.35);
    padding: 1rem 3rem;
    border-radius: 1rem;
    flex: 1 1 60%;
    margin-right: 2.5rem;
}

.bio p {
    font-size: 1rem;
    padding: 0.25rem 0;
}

.bio ul {
    padding-left: 2rem;
}

.img-container {
    max-height: 20rem;
    max-width: 20rem;
}

.photo1 {
    border-radius: 50%;
    height: 100%;
    width: 100%;
}

.photo2 {
    display: none;
}

#bio-contact {
    justify-content: center;
    text-align: center;
}

#bio-contact .bio {
    display: flex;
    flex-flow: column wrap;
    align-items: center;
    margin-right: 0;
    flex-grow: 0;
}

/* Content */

.content-section {
    color: white;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.content-section h2 {
    width: 100%;
    text-align: center;
    padding-bottom: 1rem;
}

/* Projects */

.project-container {
    display: inline-flex;
    flex-flow: row wrap;
    align-content: flex-start;
}

h3 {
    width: 100%;
    margin-top: 1rem;
}

.left {
    width: 50%;
}

.right {
    width: 50%;
    text-align: right;
    justify-content: flex-end;
}

.challenge {
    text-align: center;
    justify-content: space-between;
    width: 100%;
    margin-top: 3rem;
}

.cheat {
    height: 100%;
}

#cheat {
    margin-bottom: 1rem;
}

.project-container a:hover,
#cheat:hover {
    transform: scale(1.075);
}

.project-container a,
#cheat {
    text-decoration: none;
    transition-property: all;
    transition-duration: 0.30s;
    transition-timing-function: ease-in-out;
}

.project {
    background-color: white;
    color: black;
    border-radius: 0.5rem;
    width: 14rem;
    text-align: center;
    margin-top: 1rem;
}

.left .project {
    margin-right: 1rem;
}

.right .project {
    margin-left: 1rem;
}

.project:active {
    background-color: silver;
}

figure img {
    width: 100%;
    height: 8rem;
    border-radius: 0.5rem 0.5rem 0 0;
    padding: 0.25rem;
}

figcaption {
    padding: 0 0.5rem 0.5rem 0.5rem;
    color: black;
    height: 100%;
    font-weight: 500;
}

/* Skills */

#skills {
    margin-top: 5rem;
    display: flex;
    justify-content: space-evenly;
}

.fab,
.fas {
    font-size: 4rem;
    padding: 1rem 1rem;
    color: white;
}

.email-icon {
    display: none;
}

/* Footer */

footer {
    margin-top: 5rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 1rem 1.5rem;
    border-top: silver solid 1px;
}

small {
    color: silver;
}

footer .right {
    text-align: right;
}

footer a {
    color: rgb(117, 196, 202);
    text-decoration: none;
}

/* LIGHT MODE */

/* Nav */

.light body {
    background-color: white;
}

.light header {
    background-color: white;
    border-bottom: rgb(44, 1, 70) 2px solid;
}

.light h1 a {
    color: black
}

.light nav li a {
    color: black;
}

.light nav li a:hover {
    color: rgb(186, 0, 109);
}

.light .fa-regular {
    color: rgb(44, 1, 70);
}

/* Main & Sections */

/* Banner */

.light #banner {
    background-image: url("../images/banner-light-mode.png");
}

/* add color img to bio img, default hide, then when light, show color and hide greyscale */

.light .bio {
    color: black;
    background-color: rgba(255, 255, 255, 0.5);
}

.light .photo1 {
    display: none;
}

.light .photo2 {
    display: block;
    border-radius: 50%;
    height: 100%;
    width: 100%;
}

/* Projects */

.light .content-section {
    color: black;
}

.light .project {
    background-color: rgba(44, 1, 70, 0.35);
}

.light .project:active {
    background-color: rgb(117, 196, 202);
}

/* Skills */

.light .fab,
.light .fas {
    color: black;
}

/* Footer */

.light footer {
    border-top: rgb(44, 1, 70) solid 1px;
}

.light footer small {
    color: rgb(44, 1, 70);
}

.light footer a {
    color: rgb(186, 0, 109);
}

/* Media Queries */

/* Smaller Desktop Screen */

@media only screen and (max-width: 1150px) {

    #bio_section {
        justify-content: center;
        margin-bottom: 5rem;
    }

    .bio {
        margin-top: 1rem;
        margin-right: 0;
        flex-basis: 100%;
    } 
    
    #bio-contact .bio {
        margin-top: 0;
        flex-basis: auto;
    }
}

/* Tablet */

@media only screen and (max-width: 814px) {
    
    .mobile {
        display: block;
    }

    .desktop {
        display: none;
    }

    .img-container {
        max-height: 18rem;
        max-width: 18rem;
        margin: 0;
    }
}

/* Large Screen Phone */

@media only screen and (max-width: 590px) {

    #projects, .challenge, .left, .right {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 100%;
        text-align: center;
    }

    .left .project {
        margin-right: 0;
    }
    
    .right .project {
        margin-left: 0;
    }
}

/* Logo to Initials for better spaced nav - burger menu in future perhaps? */

@media only screen and (max-width: 550px) {
    
    .desktop-home {
        display: none;
    }

    .mobile-home {
        display: block;
        font-size: 2.5rem;
    }
}

/* Smaller Screen Phone */

@media only screen and (max-width: 415px) {
    
    .bio {
        padding: 1rem 2rem;
    }
    
    .img-container {
        max-height: 15rem;
        max-width: 15rem;
    }
}

